[Fix] Overflow 관련 버그 수정

--- a/movieswan-ticket-app/src/main/resources/static/css/layout/common_page.css
+++ b/movieswan-ticket-app/src/main/resources/static/css/layout/common_page.css
@@ -10,8 +10,6 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: 'Gugi', cursive;
-
-    overflow-x: hidden;
 }
 
 #default_bg {
